[tool.poetry]
name = "spotify-backup"
version = "0.0.1"
description = "A Python script that exports all of your Spotify playlists."
authors = ["emkor93 <emkor93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
